--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+     "build": "next build && next export",
+     "start": "next start",
+     "lint": "next lint"
   },
   "dependencies": {
     "next": "^11.0.1",
+    "next-optimized-images": "^2.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
